plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.7'
    id 'org.jetbrains.kotlin.jvm' version '1.3.0'
}

mainClassName = "main.java.core.JavaApp"


javafx {
    version = "12"
    modules = ['javafx.controls', 'javafx.fxml']
}

version '1.0'

sourceCompatibility = 1.8

repositories {
    jcenter()
    mavenCentral()
}

dependencies {
    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
    compile 'com.jfoenix:jfoenix:9.0.8'
    compile 'net.dv8tion:JDA:3.8.3_463'
    compile 'com.google.code.gson:gson:2.8.1'
    compile 'commons-io:commons-io:2.5'
    testCompile group: 'junit', name: 'junit', version: '4.12'
}

compileKotlin {
    kotlinOptions.jvmTarget = "1.8"
}
compileTestKotlin {
    kotlinOptions.jvmTarget = "1.8"
}

compileJava {
    options.encoding = "UTF-8"
    options.incremental = true

    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.base/com.sun.javafx.event=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.scene.traversal=ALL-UNNAMED"
    ])
    options.compilerArgs.addAll([
            "--add-exports",
            "javafx.graphics/com.sun.javafx.util=ALL-UNNAMED"
    ])
}